<resources>
    <string name="app_name">Kotlin Seguridad</string>
    <string name="Registrarse">Login</string>
    <string name="logueado_seccion_adm">Sección de administrador</string>
    <string name="query_not_found">Usuario y o Contraseña incorrecto</string>
    <string name="error_loguin">Error</string>
    <string name="title_activity_drawer1">drawer1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="editarusuario_nombreapell">"Nombre "</string>
    <string name="hint_cedula">No Cédula</string>
    <string name="hint_contrase">Contraseña</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_apellido">Apellidos</string>
    <string name="hint_nombre">Nombre</string>
    <string name="aceptar">Aceptar</string>
    <string name="error_foto">Error</string>
    <string name="error_editar_usuario">Error</string>
    <string name="guardado_editar_usuario">Guardado</string>

    <string name="MasInfo">Más</string>
    <string name="un_usuario_nombreusuario">Nombre de usuario</string>
    <string name="un_usuario_contrasena">Contraseña</string>
    <string name="un_usuario_cedula">Numero de cédula</string>
    <string name="un_usuario_createdAt">Fecha de creación</string>
    <string name="una_activiad_createdAt">Fecha de Creación</string>
    <string name="una_actividad_fecha">Fecha</string>
    <string name="una_actividad_fechaexpir">Fecha de expiración</string>
    <string name="una_actividad_descripci">Descripción de la tarea </string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="usuario_borrado">Eliminado</string>
    <string name="hint_descripc">Tarea</string>
    <string name="hint_nombre_actividad">Nombre de Actividad</string>

    <string name="editarActNotOk">Error</string>
    <string name="menu_editar">Editar</string>

    <string name="editarActOk">Actividad Modificada</string>
    <string name="crearActOk">Actividad Creada</string>
    <string name="hint_nombre_formulario">Nombre de Formulario</string>
    <string name="hint_nombre_tarea">Pregunta</string>
    <string name="hint_preguntaNo">Pregunta ..</string>
    <string name="formulario_creado">Formulario Creado</string>
    <string name="formulario_creado_error">Error</string>
    <string name="fecha_exp">Caducidad del formulario</string>
    <string name="preguntas">Preguntas</string>
    <string name="formulario_eliminado">Formulario eliminado</string>
    <string name="error_eliminar_form">Error</string>
    <string name="formulario_editado">Editado</string>
    <string name="Personas">Personal</string>

    <string name="SeleccionaHoraLimite">         Hora Límite</string>
    <string name="complete_fechas">Complete la fecha de entrega</string>
    <string name="SeleccionaDiaActividad">Selecciona el día</string>


    <string name="menu_usuar">Usuarios</string>
    <string name="menu_formul">Formularios</string>
    <string name="menu_act">Actividades</string>
    <string name="menu_equip">Equipamiento</string>

    <string name="menu_str_usuario">Usuarios</string>




    <string name="menu_misactividades">Mis actividades</string>
    <string name="menu_actividadesrealizadas">Actividades realizadas</string>
    <string name="menu_actividadespendientes">Actividades pendientes</string>


    <string name="titleEactiv">Editar Actividad</string>
    <string name="titleEusuario">Editar Usuario</string>
    <string name="titleEformulario">Editar Formulario</string>

    <string name="titleCactiv">Crear Actividad </string>
    <string name="titleCusuario">Crear Usuario</string>
    <string name="titleCformulario">Crear Formulario</string>


    <string name="titleactiv">Actividad </string>
    <string name="titleinci">Evento no deseado </string>
    <string name="titleusuario">Usuario</string>
    <string name="titleformulario">Formulario</string>

    <string name="administrador">Administrador</string>
    <string name="toast_campos_mal">Rectifique los campos</string>
    <string name="title_activity_drawer2">drawer2</string>
    <string name="deslog">Salir</string>
    <string name="actividades">Actividades</string>

    <string name="menu_str_formularios_entrgados">Actividades realizadas</string>
    <string name="menu_str_formularios_por_entregar">Actividades pendientes</string>

    <string name="responder_boton">Responder</string>
    <string name="hint_respuesta_de_acti">Respuesta…</string>
    <string name="enviar_boton">Enviar</string>
    <string name="respuesta_ok">Enviado</string>
    <string name="respuesta_ko">Error al enviar</string>
    <string name="location_denied">Requiere permisos de Ubicación</string>
    <string name="nav_header_textv_nombre">Nombre Apellido</string>
    <string name="nav_header_textv_usuario">Usuario</string>
    <string name="en_progreso">"Cargando…"</string>
    <string name="bu_ver_estados_del_formulario">Revisar Entregas</string>
    <string name="fecha">Fecha</string>
    <string name="cumplimiento">Enviado!</string>
    <string name="estado_formularios">Estado de Formularios</string>
    <string name="bu_ver_preguntas_del_formulario">Volver a preguntas</string>
    <string name="fecha_imposible">Seleccione una fecha válida</string>
    <string name="una_actividad_hora">Hora</string>
    <string name="ver_mi_respuesta">Revisar mis respuestas</string>
    <string name="atras">Atrás</string>
    <string name="preguntas_respuesta">Preguntas contestadas</string>
    <string name="hint_rol">Rol asignado</string>
    <string name="cancelar">Cancelar</string>
    <string name="regresar">Regresar</string>

    <string name="titleequip">Equipamientos</string>
    <string name="editarbut">Editar</string>
    <string name="hint_nombre_eq">Equipamiento</string>
    <string name="titleCequipamiento">Nuevo equipamiento</string>
    <string name="titleEequipamiento">Editar Equipamiento</string>

    <string name="equipamiento_eliminado">Equipamiento Eliminado</string>
    <string name="equipamiento_error_eliminado">Error al eliminar</string>
    <string name="eliminarbut">Eliminar</string>

    <string name="hint_nombre_rol">Rol</string>
    <string name="titlerol">Rol</string>
    <string name="titleErol">Editar rol</string>
    <string name="rol_eliminado">Eliminado</string>
    <string name="rol_error_eliminado">Error al eliminar</string>
    <string name="titleCRol">Nuevo Rol</string>
    <string name="una_equipamiento_uso">Uso</string>
    <string name="una_equipamiento_descripcion">Descripción</string>
    <string name="hint_descr_eq">Descripción</string>
    <string name="hint_uso_eq">Uso</string>

    <string name="menu_str_salir">Cerrar Sección</string>
    <string name="menu_str_salir_de_app">Salir</string>
    <string name="un_usuario_rol">Rol</string>
    <string name="lorenm_isum_large">Nombre1 Nombre2 Apellido1 Apellido2 Nombre Nombre Nombre Nombre Nombre8</string>
    <string name="permisos">Seleccionar los permisos…</string>
    <string name="permisos_simple">Permisos</string>
    <string name="misactividades">Mis actividades</string>

    <string name="menu_str_empleados">Adm Empleados</string>
    <string name="menu_str_equipamietos">Adm Equipamientos</string>
    <string name="menu_str_formularios">Adm Formularios</string>
    <string name="menu_str_actividades">Adm Actividades</string>
    <string name="menu_str_roles">Adm Roles</string>
    <string name="hint_direccion">Dirección</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="un_usuario_telefono">Teléfono</string>
    <string name="un_usuario_direccion">Dirección</string>
    <string name="boton_logerarse">Registrarse</string>
    <string name="check_cuenta_de_adm">Cuenta de Administrador</string>
    <string name="hint_nombre_sitio">Nombre del sitio</string>
    <string name="hint_nombre_ubicacion">Ubicación</string>
    <string name="SeleccionaHora">Seleccionar hora</string>
    <string name="una_actividad_sitio">Sitio</string>
    <string name="una_actividad_lugar">Ubicación</string>
    <string name="una_actividad_formulario_nombre">Nombre del formulario</string>
    <string name="una_actividad_formulario_tipo">Tipo de formulario</string>
    <string name="enviar_informe">Enviar Informe</string>
    <string name="revisar_preguntas">Preguntas de la Actividad</string>
    <string name="bu_subir_evidencia">Agregar</string>
    <string name="bu_quitar_evidencia">Quitar todas</string>
    <string name="str_equipamiento">Equipamiento</string>
    <string name="str_evidencias">Evidencias</string>
    <string name="title_descargar_reportes">Reportes de Tareas</string>
    <string name="bu_descargar">Buscar</string>
    <string name="SeleccionarFecha">Seleccionar fecha</string>
    <string name="menu_reportes">Reporte de tareas</string>
    <string name="menu_str_reportes">Reportes de tareas</string>
    <string name="sin_conexion_intern">Sin conexión a Internet</string>
    <string name="no_pudo_cargar">No se pudo abrir</string>
    <string name="titlerespondiendoformulario">Enviar reporte</string>
    <string name="noexisteformulario">Actividad no tiene formulario asignado</string>
    <string name="buscarenmapa">Ver en mapa</string>
    <string name="sin_evidencias">Falta subir evidencias</string>
    <string name="no_pudo_cargarelform_deactividad">No existe formulario para esta actividad</string>
    <string name="toast_anadelaspreguntas">Necesita añadir preguntas</string>
    <string name="toast_preguntas_sin_llenar">Faltan preguntas por llenar</string>
    <string name="toast_seleccione_tipo_formulario">Falta el Tipo de Formulario</string>
    <string name="str_incidentname">Nombre del Incidente</string>
    <string name="str_descr_incidente">Descripción del Incidente</string>
    <string name="strIncidente">Pruebas del Incidente </string>
    <string name="menu_str_inc">Eventos no deseados</string>
    <string name="eventonodes_error_eliminado">Error</string>
    <string name="eventonodes_eliminado">Eliminado</string>
    <string name="bu_subir_foto">Subir Foto</string>
    <string name="incidencia_enviada">Subida</string>
    <string name="informes">Reportes</string>

</resources>