<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"

    app:startDestination="@+id/nav2_act">

    <fragment
        android:id="@+id/nav2_act"
        android:name="com.ello.kotlinseguridad.ui.us_act.UsActFrag"
        android:label="@string/menu_misactividades"
        tools:layout="@layout/frag_us_act" />

    <fragment
        android:id="@+id/nav2_form_done"
        android:name="com.ello.kotlinseguridad.ui.us_form_done.UsFormDoneFrag"
        android:label="@string/menu_actividadesrealizadas"
        tools:layout="@layout/frag_us_encu_done" />

    <fragment
        android:id="@+id/nav2_form_undone"
        android:name="com.ello.kotlinseguridad.ui.us_form_undone.UsFormUndoneFrag"
        android:label="@string/menu_actividadespendientes"
        tools:layout="@layout/frag_us_encu_done" />






    <fragment
        android:id="@+id/nav_empleados"
        android:name="com.ello.kotlinseguridad.ui.adm_us.AdmEmFrag"
        android:label="@string/menu_str_empleados"
        tools:layout="@layout/frag_adm_empleados" />










    <fragment

        android:id="@+id/nav_usuarios"
        android:name="com.ello.kotlinseguridad.ui.adm_us.AdmUsFrag"
        android:label="@string/menu_usuar"
        tools:layout="@layout/frag_adm_us" />


    <fragment
        android:id="@+id/nav_formularios"
        android:name="com.ello.kotlinseguridad.ui.adm_form.AdmFormFrag"
        android:label="@string/menu_formul"
        tools:layout="@layout/frag_adm_form" />

    <fragment
        android:id="@+id/nav_actividads"
        android:name="com.ello.kotlinseguridad.ui.adm_act.AdmActFrag"
        android:label="@string/menu_act"
        tools:layout="@layout/frag_adm_act" />

    <fragment
        android:id="@+id/nav_equipamentos"
        android:name="com.ello.kotlinseguridad.ui.adm_equip.AdmEquipFrag"
        android:label="@string/menu_equip"
        tools:layout="@layout/frag_adm_equip" />

    <fragment
        android:id="@+id/nav_incid"
        android:name="com.ello.kotlinseguridad.ui.incidencias.IncidFrag"
        android:label="@string/menu_str_inc"
        tools:layout="@layout/frag_incide" />




</navigation>