<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginStart="@dimen/spacing_large"
    android:layout_marginEnd="@dimen/spacing_large"
    android:layout_marginTop="@dimen/spacing_medium"
    android:layout_marginBottom="@dimen/spacing_medium"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?android:selectableItemBackground"
    >


<ImageView
    android:layout_width="32dp"
    android:layout_height="32dp"
    app:srcCompat="@drawable/ic_icon_done"
    android:id="@+id/item_done_undone_icon"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    >

</ImageView>

<LinearLayout
    app:layout_constraintStart_toEndOf="@id/item_done_undone_icon"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toLeftOf="@id/linearfechahora"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/spacing_large"
    >



                <TextView


                    android:id="@+id/item_nombre_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_nombre"

                    >
                </TextView>
        <TextView
        android:id="@+id/item_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cumplimiento"
        >
    </TextView>
</LinearLayout>

    <LinearLayout
        android:id="@+id/linearfechahora"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <TextView

        android:id="@+id/item_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        >
    </TextView>

    <TextView
        android:id="@+id/item_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/una_actividad_hora"

        >
    </TextView>
    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>


