<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout android:background="@android:color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.google.android.material.appbar.AppBarLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include layout="@layout/my_toolbar" android:id="@+id/included"> </include>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >


    <LinearLayout
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"


    >


        <ImageView
            android:visibility="visible"
            android:onClick="LoadFoto"
            android:id="@+id/imageView"
            android:layout_marginTop="@dimen/editarusuariomargin"
            android:layout_marginBottom="@dimen/editarusuariomargin"
            android:layout_gravity="center"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/male"

            >
        </ImageView>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_marginTop="@dimen/editarusuariomargin"
            android:layout_marginBottom="@dimen/editarusuariomargin"
            android:layout_marginEnd="@dimen/editarusuariomarginleft"
            android:layout_marginStart="@dimen/editarusuariomarginleft"


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/editusuario_nombreL"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editusuario_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre"
                android:textColorHint="@color/black"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout

            android:layout_marginTop="@dimen/editarusuariomargin"
            android:layout_marginBottom="@dimen/editarusuariomargin"
            android:layout_marginEnd="@dimen/editarusuariomarginleft"
            android:layout_marginStart="@dimen/editarusuariomarginleft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/editusuario_apellidoL"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editusuario_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_apellido"
                android:textColorHint="@color/black"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/editarusuariomargin"
            android:layout_marginBottom="@dimen/editarusuariomargin"
            android:layout_marginEnd="@dimen/editarusuariomarginleft"
            android:layout_marginStart="@dimen/editarusuariomarginleft"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/editusuario_usuarioL"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editusuario_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_usuario"
                android:textColorHint="@color/black"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/editarusuariomargin"
            android:layout_marginBottom="@dimen/editarusuariomargin"
            android:layout_marginEnd="@dimen/editarusuariomarginleft"
            android:layout_marginStart="@dimen/editarusuariomarginleft"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/editusuario_contraseL"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editusuario_contrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_contrase"
                android:textColorHint="@color/black"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/editarusuariomargin"
            android:layout_marginBottom="@dimen/editarusuariomargin"
            android:layout_marginEnd="@dimen/editarusuariomarginleft"
            android:layout_marginStart="@dimen/editarusuariomarginleft"


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/editusuario_cedulaL"
            >


            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/editusuario_cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cedula"
                android:textColorHint="@color/black"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/editarusuariomargin"
            android:layout_marginBottom="@dimen/editarusuariomargin"
            android:layout_marginEnd="@dimen/editarusuariomarginleft"
            android:layout_marginStart="@dimen/editarusuariomarginleft"


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/editusuario_direccionL"
            >


            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/editusuario_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_direccion"
                android:textColorHint="@color/black"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/editarusuariomargin"
            android:layout_marginBottom="@dimen/editarusuariomargin"
            android:layout_marginEnd="@dimen/editarusuariomarginleft"
            android:layout_marginStart="@dimen/editarusuariomarginleft"


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:id="@+id/editusuario_telefonoL"
            >


            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/editusuario_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_telefono"
                android:textColorHint="@color/black"
                >
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>




        <Spinner
            android:id="@+id/editarusuario_spinner_roles"
            android:layout_marginTop="@dimen/editarusuariomargin"
            android:layout_marginBottom="@dimen/editarusuariomargin"
            android:layout_marginEnd="@dimen/editarusuariomarginleft"
            android:layout_marginStart="@dimen/editarusuariomarginleft"
            android:layout_width="match_parent"
            android:layout_height="50dp">
        </Spinner>


        <CheckBox
            android:id="@+id/editarusuario_admin"
            android:text="@string/check_cuenta_de_adm"
            android:layout_marginTop="@dimen/editarusuariomargin"
            android:layout_marginBottom="@dimen/editarusuariomargin"
            android:layout_marginEnd="@dimen/editarusuariomarginleft"
            android:layout_marginStart="@dimen/editarusuariomarginleft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </CheckBox>









        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:layout_marginTop="@dimen/editarusuariomargin"
                android:layout_marginBottom="@dimen/editarusuariomargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:layout_gravity="center"
                android:onClick="CancelarClick"
                >
            </Button>

            <View

                android:layout_width="10dp"
                android:layout_height="1dp"


                >
            </View>

            <Button
                android:layout_marginTop="@dimen/editarusuariomargin"
                android:layout_marginBottom="@dimen/editarusuariomargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aceptar"
                android:layout_gravity="center"
                android:onClick="AcpetarClick"
                >
            </Button>


        </LinearLayout>

























    </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>


